hphp/hack/test/typecheck/string_interpolation/str_interp_space.php
<?hh

function main():void{
  $jam = "grape";
  $a = "{$ jam}s";
  $a = "${ jam}s";
}
